--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    background: grey;
+    background:url("../img/piarra3.jpg");
     
     
 } 
@@ -32,13 +32,20 @@
 
 }
 
+.circulosinputs{
+  visibility: hidden;
+  width: 0%;
+  height: 0%;
+  margin: 0%;
+}
+
 p{
   font-family: 'Bad Script', cursive;
   font-size: 19px;
   text-align: center;
-  border-radius: 50%;
-  border-style: solid;
-  color:white;
+  /* border-radius: 50%; */
+  /* border-style: solid; */
+   color:white;
 
 }
 .titulo{
@@ -53,30 +60,35 @@ p{
   align-items: center;
 
 }
-.star-btn{
-
-  font-size: 20px;
-  font-family: 'Bad Script', cursive;
-  color:white;
-  font-weight: bold;
-  padding:10px 20px;
-  border-style:solid;
-  border-radius: 10px;
-  
-
-}
-.next-btn{
-
-  font-size: 20px;
-  font-family: 'Bad Script', cursive;
-  color:white;
-  font-weight: bold;
-  padding:10px 20px;
-  border-style:solid;
-  border-radius: 10px;
+.labelcorrect{
+  background:rgb(53, 85, 53);
+  border: 1px solid rgb(53, 85, 53);
 }
 
+.labelerror{
 
+  background: rgb(83, 19, 19);
+  border: 1px solid rgb(83, 19, 19);
+
+}
+.enlace{
+
+  font-size: 18px;
+  font-family: 'Bad Script', cursive;
+  color:white;
+  /* font-weight: bold; */
+  padding:10px 20px;
+  border-bottom-style: dotted;
+  }
+
+  .a{
+    text-decoration: none;
+    font-family: 'Bad Script', cursive;
+    color:white;
+    font-size: 21px;
+    border-bottom-style: dotted;
+    border-bottom-width: thick;
+  }
 
 
 
