--- a/css/quizz.css
+++ b/css/quizz.css
@@ -1,13 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    background: grey;
+    background: white;
     
 }
 
 #wrapper{
 
-    background: url("../img/preguntas.jpg");
+    background: url("../img/pizarra1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 1200px;
@@ -62,23 +62,11 @@
   }
 }
 
-/* .byline span {
-    animation: spin-letters 10s linear infinite;
-  }
-  .byline {
-    animation: move-byline 10s linear infinite;
-  } */
-
-/* 
-  .byline span {
-    display: inline-block;
-  } */
-
   .byline {
     position: absolute;
   }
   .byline {
-    color: #fff;
+    color: grey;
     font-size: 5em;
     left: -2em;
     /* letter-spacing: 0.4em; */
@@ -91,69 +79,58 @@
     transition:left 5s cubic-bezier(.5, -1, .5, 2);
     font-family: 'Bad Script', cursive;
    
-    /* transition: left 5s cubic-bezier(0, 0, 1, 1); */
+ }
+
+  #empezar{
+    display: flex;
+    font-family: 'Bad Script', cursive;
+    pointer-events: none;
+    cursor: default;
+    transition: all 0.5s ease-out;
+    
   }
- #galleta{
-    width: 250px;
+
+ #questions{
+    display:flex;
+    width: 1150px;
     height: 100px;
     position:relative;
-    background: url("../img/galleta.jpg");
+    background: url("../img/questions.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     bottom: -500px;
     left: 300px;
     z-index: 1;
-    animation: interrogante 2s infinite liner 0s;
-    animation-direction:reverse;
-    
-    
-    
-} 
+    transition: all 0.5s ease-out;
+    /* animation: interrogante 2s infinite liner 0s;
+    animation-direction:reverse; */
+
+    } 
+
 #galleta:hover{
   width:600px;
 }
+.a{
+  text-decoration: none;
+  font-family: 'Bad Script', cursive;
+  color:rgb(56, 2, 2);
+  font-weight: lighter;
+  font-weight: 500;
+  /* border-radius: 5px soild black; */
+  font-size: 21px;
+}
 
-/* #mono{
-  width: 250px;
-  height: 100px;
-  position:relative;
-  background: url("../img/mono.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  bottom: -100px;
-  left: 300px;
-  z-index: 1;
-  animation: interrogante 2s infinite liner 0s;
-  animation: 9s linear infinite;
-
-} */
 .enlace{
-    border-radius: 50%;
-    border-style: solid;
+    text-decoration: none;
+    /* border-radius: 3px soild rgb(3, 3, 146); */
     text-align: center;
     font-family: 'Bad Script', cursive;
-    color: white;
-    cursor: pointer;
-    width: 90px;
-    height: 40px;
-    left: 100px;
-  }
-
-#mono {
-    width: 150px;
-    height: 145px;
-    position:relative;
-    background: url("../img/mono.jpg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    z-index: 1;
-    bottom: -470px;
-    left: 999px;
-    /* animation: coco 9s infinite liner 0s; */
-    transition:left 5s cubic-bezier(.5, -1, .5, 2);
-    
+    font-weight: lighter;
+    font-weight: 500;
+    font-size: 30px;
+    color:rgb(116, 2, 2);
+    cursor: pointer;    
  }
-
 
  #movercoco {
    /* width: 150px;
@@ -164,11 +141,12 @@
     cursor: pointer;
     /* width: 177px;
     height: 160px; */
-    left: 100px;
+    left: 300px;
     transition:left 5s cubic-bezier(.5, -1, .5, 2);
     font-family: 'Bad Script', cursive;
     font-size: 20px;
     color:white;
+    text-decoration: none;
   }
 
 /* @keyframes move-byline {
@@ -189,13 +167,3 @@
     100% { background-position:-672px }
 
 }
-
-/* @keyframes coco{
-
-    
-    0% { background-position:0 }
-    100% { background-position: 672px }
-
-}  */
-
-
